# csel-workspace

./: .gitignore
boot-scripts/: Makefile  boot_cifs.cmd  boot_net.cmd
docs/: disclaimer.typ  drivers.typ  env.typ  modules.typ  perf.typ  procs.typ  project.typ  project_report.typ  report1.typ  report2.typ  system.typ  week1.complement.typ  week1.typ
src/: buildroot_path  kernel_settings
src/01_environment/: appl.mk
src/01_environment/dot-vscode/: launch.json_presque
src/02_modules/exercice01/: skeleton.c
src/02_modules/exercice03/: skeleton.c
src/02_modules/exercice04/: skeleton.c
src/02_modules/exercice05/: skeleton.c  skeleton.sol.c  test_exo5.sh  watch.sh
src/02_modules/exercice06/: skeleton.sol.c  test_exo6.sh
src/02_modules/exercice07/: skeleton.c  skeleton.sol.c  test_exo7.sh
src/02_modules/exercice08/: skeleton.c  skeleton.sol.c  test_exo8.sh  watch.sh
src/02_modules/procstat/: Makefile
src/03_drivers/exercice01/: Makefile  app-sol  main.c  main.sol.c
src/03_drivers/exercice02/: skeleton.c
src/03_drivers/exercice04/: Makefile
src/03_drivers/exercice05/: skeleton.c
src/03_drivers/exercice05.1/: skeleton.c
src/03_drivers/sample01/: Makefile
src/04_system/cgroups/: Makefile  cgroups.c
src/04_system/procs/: Makefile  (+2 more)
src/07_miniproj/usr/: CMakeLists.txt  client_main.c  daemon.c  daemon.h  daemon_io.c  daemon_ipc.c  daemon_ipc_protocol.h  daemon_key.c  daemon_key.h  daemon_led.c  daemon_led.h  daemon_main.c  daemon_screen.c  daemon_timer.c  daemon_timer.h  gpio.c  gpio.h
src/07_miniproj/usr/ssd1306/: CMakeLists.txt  Makefile
(+24 files in other folders)
